[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/fade.png" type="Texture" id=2]
[ext_resource path="res://sprites/debug/tile000.png" type="Texture" id=3]
[ext_resource path="res://sprites/debug/tile002.png" type="Texture" id=4]
[ext_resource path="res://sprites/debug/tile001.png" type="Texture" id=5]
[ext_resource path="res://sprites/debug/tile003.png" type="Texture" id=6]
[ext_resource path="res://sprites/debug/tile005.png" type="Texture" id=7]
[ext_resource path="res://sprites/debug/tile004.png" type="Texture" id=8]
[ext_resource path="res://sprites/debug/tile009.png" type="Texture" id=9]
[ext_resource path="res://sprites/debug/tile011.png" type="Texture" id=10]
[ext_resource path="res://sprites/debug/tile010.png" type="Texture" id=11]
[ext_resource path="res://sprites/debug/tile012.png" type="Texture" id=12]
[ext_resource path="res://sprites/debug/tile006.png" type="Texture" id=13]
[ext_resource path="res://sprites/debug/tile014.png" type="Texture" id=14]
[ext_resource path="res://sprites/debug/tile007.png" type="Texture" id=15]
[ext_resource path="res://sprites/debug/tile008.png" type="Texture" id=16]
[ext_resource path="res://sprites/debug/tile015.png" type="Texture" id=17]
[ext_resource path="res://sprites/debug/tile013.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 20 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "right",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "left",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "up",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 12 ) ],
"loop": true,
"name": "rightidle",
"speed": 1.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "downidle",
"speed": 1.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": true,
"name": "down",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 17 ) ],
"loop": true,
"name": "upidle",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 18 ) ],
"loop": true,
"name": "leftidle",
"speed": 1.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=3]

resource_name = "fade"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("../../Transitions")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.55 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "resend"
}, {
"args": [  ],
"method": "resendPart2"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Transition/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D" index="0"]

z_index = 1
input_pickable = false
collision_layer = 3
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]

[node name="Transition" type="Node2D" parent="." index="0"]

z_index = 5
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="TextureRect" type="TextureRect" parent="Transition" index="0"]

modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -750.0
margin_top = -500.0
margin_right = 750.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 8 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 2 )
animation = "rightidle"
playing = true

[node name="Camera2D" type="Camera2D" parent="." index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade = SubResource( 3 )
blend_times = [  ]

[node name="rayDownLeftA" type="RayCast2D" parent="." index="4"]

position = Vector2( 20, 28 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayDownLeftB" type="RayCast2D" parent="." index="5"]

position = Vector2( 6, 28 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayDownRightA" type="RayCast2D" parent="." index="6"]

position = Vector2( -20, 28 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayDownRightB" type="RayCast2D" parent="." index="7"]

position = Vector2( -6, 28 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayRightDownA" type="RayCast2D" parent="." index="8"]

position = Vector2( 20, 28 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayRightDownB" type="RayCast2D" parent="." index="9"]

position = Vector2( 20, 14 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayRightUpA" type="RayCast2D" parent="." index="10"]

position = Vector2( 20, -12 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayRightUpB" type="RayCast2D" parent="." index="11"]

position = Vector2( 20, 2 )
rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayLeftDownA" type="RayCast2D" parent="." index="12"]

position = Vector2( -20, 28 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayLeftDownB" type="RayCast2D" parent="." index="13"]

position = Vector2( -20, 14 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayLeftUpA" type="RayCast2D" parent="." index="14"]

position = Vector2( -20, -12 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayLeftUpB" type="RayCast2D" parent="." index="15"]

position = Vector2( -20, 2 )
rotation = 1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayUpLeftA" type="RayCast2D" parent="." index="16"]

position = Vector2( 20, -12 )
rotation = 3.14159
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayUpLeftB" type="RayCast2D" parent="." index="17"]

position = Vector2( 6, -12 )
rotation = 3.14159
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayUpRightA" type="RayCast2D" parent="." index="18"]

position = Vector2( -20, -12 )
rotation = 3.14159
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="rayUpRightB" type="RayCast2D" parent="." index="19"]

position = Vector2( -6, -12 )
rotation = 3.14159
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 2 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]


